--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public"
+    "start": "sirv public",
+    "deploy": "git push -u origin main"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^14.0.0",
